added terminal to highlighted work

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1628,6 +1628,10 @@ input, select, textarea {
 			margin: 0 0 2em 0;
 		}
 
+		.featured-p {
+			min-height: 100px;
+		}
+
 /* Button */
 
 	input[type="button"],
