--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -56,8 +56,9 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #2eafec;
-  color: #fff;
+  background: lightgray;
+  color: #2850FC;
+  border: 1px solid #2850FC;
 }
 
 .back-to-top.active {
@@ -466,13 +467,13 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #050d18;
+  color: #2850FC;
 }
 
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #1f5297;
+  border-left: 2px solid #2850FC;
   position: relative;
 }
 
@@ -488,7 +489,6 @@ section {
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #e4edf9;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
