--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -527,12 +527,22 @@ section {
   margin-bottom: 30px;
 }
 
+.portfolio .portfolio-item img {
+  width: 100%;
+  max-height: 175px;
+  min-height: 175px;
+}
+
+.portfolio .portfolio-item a {
+  font-size: 8pt;
+}
+
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 auto 35px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: white;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -600,7 +610,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
+  color: white;
   font-size: 28px;
   text-align: center;
   background: #2850FC;
@@ -635,6 +645,7 @@ section {
 --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
+  background-color: lightgray;
 }
 
 .portfolio-details .portfolio-details-slider img {
@@ -649,7 +660,7 @@ section {
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: lightgray;
   opacity: 1;
   border: 1px solid #2850FC;
 }
@@ -661,6 +672,7 @@ section {
 .portfolio-details .portfolio-info {
   padding: 30px;
   box-shadow: 0px 0 30px rgba(5, 13, 24, 0.08);
+  background-color: white;
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -1042,7 +1054,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 20px 0;
-  background: #f9f9f9;
+  background: lightgray;
 }
 
 .breadcrumbs h2 {
@@ -1073,8 +1085,7 @@ section {
 @media (max-width: 768px) {
   .breadcrumbs .d-flex {
     display: block !important;
-  }
-
+  } 
   .breadcrumbs ol {
     display: block;
   }
