--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -614,13 +614,16 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-links a {
   
-  font-size: 28px;
+  font-size: 20px;
+  padding-top: 75px;
   text-align: center;
   vertical-align: center;
-  /* background: #2850FC; */
-  transition: 0.3s;
+  background: #2850FC;
+  transition: 0.7s;
   width: 100%;
+  height: 100%;
   margin: auto;
+  color: white;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a+a {
@@ -952,7 +955,7 @@ section {
 }
 
 .contact .php-email-form .error-message {
-  display: none;
+  
   color: #fff;
   background: #ed3c0d;
   text-align: left;
@@ -965,7 +968,7 @@ section {
 }
 
 .contact .php-email-form .sent-message {
-  display: none;
+  
   color: #fff;
   background: #18d26e;
   text-align: center;
@@ -974,10 +977,14 @@ section {
 }
 
 .contact .php-email-form .loading {
-  display: none;
+  
   background: #fff;
   text-align: center;
   padding: 15px;
+}
+
+.contact .php-email-form .disable {
+  display: none;
 }
 
 .contact .php-email-form .loading:before {
@@ -1023,10 +1030,13 @@ section {
   color: #fff;
   transition: 0.4s;
   border-radius: 4px;
+  border: 1px solid #2850FC;
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #37b3ed;
+  background: lightgray;
+  color: #2850FC;
+  border: 1px solid #2850FC;
 }
 
 @-webkit-keyframes animate-loading {
