--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,47 +584,22 @@ section {
   padding: 0.5rem;
 }
 
-.portfolio .portfolio-wrap::before {
-  content: "";
-  background: rgba(255, 255, 255, 0.5);
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  transition: all ease-in-out 0.3s;
-  z-index: 2;
-  opacity: 0;
-}
-
-.portfolio .portfolio-wrap .portfolio-links {
-  opacity: 1;
-  left: 0;
-  right: 0;
-  bottom: -180px;
-  z-index: 3;
-  height: 100%;
-  position: absolute;
-  transition: all ease-in-out 0.3s;
-  display: flex;
-  justify-content: center;
-  vertical-align: center;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  
-  font-size: 22px;
-  padding-top: 75px;
-  text-align: center;
-  vertical-align: center;
+.portfolio .card-button {
   background: #2850FC;
-  transition: 0.1s;
-  opacity: 0.85;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  color: white;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+  border: 1px solid #2850FC;
 }
+
+.portfolio .card-button:hover {
+  background: lightgray;
+  color: #2850FC;
+  border: 1px solid #2850FC;
+}
+
 
 .portfolio .portfolio-wrap .portfolio-links a+a {
   border-left: 1px solid #2850FC;
@@ -1063,7 +1038,7 @@ section {
 # Breadcrumbs
 --------------------------------------------------------------*/
 .breadcrumbs {
-  padding: 20px 0;
+  padding: 20px 0 0 20px;
   background: lightgray;
 }
 
