--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #5E04A8 ;
+  color: #5e04a8;
   text-decoration: none;
 }
 
@@ -42,7 +42,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #5E04A8 ;
+  background: #5e04a8;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,8 +57,8 @@ h6 {
 
 .back-to-top:hover {
   background: lightgray;
-  color: #5E04A8 ;
-  border: 1px solid #5E04A8 ;
+  color: #5e04a8;
+  border: 1px solid #5e04a8;
 }
 
 .back-to-top.active {
@@ -122,7 +122,7 @@ h6 {
 }
 
 #header .profile .social-links a:hover {
-  background: #5E04A8 ;
+  background: #5e04a8;
   color: #fff;
   text-decoration: none;
 }
@@ -147,6 +147,9 @@ h6 {
 /* Desktop Navigation */
 .nav-menu {
   padding: 30px 0 0 0;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
 }
 
 .nav-menu * {
@@ -155,7 +158,7 @@ h6 {
   list-style: none;
 }
 
-.nav-menu>ul>li {
+.nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
 }
@@ -181,7 +184,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active,
 .nav-menu .active:focus,
-.nav-menu li:hover>a {
+.nav-menu li:hover > a {
   text-decoration: none;
   color: #fff;
 }
@@ -189,8 +192,8 @@ h6 {
 .nav-menu a:hover i,
 .nav-menu .active i,
 .nav-menu .active:focus i,
-.nav-menu li:hover>a i {
-  color: #5E04A8 ;
+.nav-menu li:hover > a i {
+  color: #5e04a8;
 }
 
 /* Mobile Navigation */
@@ -203,7 +206,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #5E04A8 ;
+  background-color: #5e04a8;
   color: #fff;
   width: 40px;
   height: 40px;
@@ -270,7 +273,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #5E04A8 ;
+  border-bottom: 3px solid #5e04a8;
 }
 
 @media (min-width: 1024px) {
@@ -306,7 +309,7 @@ section {
 }
 
 .section-bg-dark {
-  background: #5E04A8 ;
+  background: #5e04a8;
 }
 
 .section-title {
@@ -319,7 +322,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .section-title h2::after {
@@ -328,7 +331,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #5E04A8 ;
+  background: #5e04a8;
   bottom: 0;
   left: 0;
 }
@@ -343,7 +346,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .about .content ul {
@@ -364,7 +367,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #5E04A8 ;
+  color: #5e04a8;
   line-height: 0;
 }
 
@@ -387,7 +390,7 @@ section {
 .facts .count-box i {
   display: block;
   font-size: 44px;
-  color: #5E04A8 ;
+  color: #5e04a8;
   float: left;
   line-height: 0;
 }
@@ -420,7 +423,7 @@ section {
 }
 
 .facts .count-box a:hover {
-  color: #5E04A8;
+  color: #5e04a8;
 }
 
 /*--------------------------------------------------------------
@@ -457,7 +460,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #5E04A8 ;
+  background-color: #5e04a8;
 }
 
 /*--------------------------------------------------------------
@@ -468,13 +471,13 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #5E04A8 ;
+  border-left: 2px solid #5e04a8;
   position: relative;
 }
 
@@ -517,7 +520,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #5E04A8;
+  border: 2px solid #5e04a8;
 }
 
 /*--------------------------------------------------------------
@@ -562,7 +565,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -574,30 +577,29 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
-
 }
 
 .portfolio .portfolio-wrap .portfolio-header {
   text-align: center;
   color: lightgray;
-  background-color: #5E04A8 ;
+  background-color: #5e04a8;
   padding: 0.5rem;
 }
 
 .portfolio .card-button {
-  background: #5E04A8 ;
+  background: #5e04a8;
   border: 0;
   padding: 10px 24px;
   color: #fff;
   transition: 0.4s;
   border-radius: 4px;
-  border: 1px solid #5E04A8 ;
+  border: 1px solid #5e04a8;
 }
 
 .portfolio .card-button:hover {
   background: lightgray;
-  color: #5E04A8 ;
-  border: 1px solid #5E04A8 ;
+  color: #5e04a8;
+  border: 1px solid #5e04a8;
 }
 
 .portfolio .card-container {
@@ -607,9 +609,8 @@ section {
   flex-direction: column;
 }
 
-
-.portfolio .portfolio-wrap .portfolio-links a+a {
-  border-left: 1px solid #5E04A8 ;
+.portfolio .portfolio-wrap .portfolio-links a + a {
+  border-left: 1px solid #5e04a8;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -642,16 +643,22 @@ section {
   position: relative;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: lightgray;
   opacity: 1;
-  border: 1px solid #5E04A8 ;
+  border: 1px solid #5e04a8;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5E04A8 ;
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet-active {
+  background-color: #5e04a8;
 }
 
 .portfolio-details .portfolio-info {
@@ -674,7 +681,7 @@ section {
   font-size: 15px;
 }
 
-.portfolio-details .portfolio-info ul li+li {
+.portfolio-details .portfolio-info ul li + li {
   margin-top: 10px;
 }
 
@@ -706,10 +713,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #5E04A8 ;
+  background: #5e04a8;
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #5E04A8 ;
+  border: 1px solid #5e04a8;
 }
 
 .services .icon i {
@@ -723,7 +730,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .services .title {
@@ -738,7 +745,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .services .description {
@@ -832,11 +839,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #5E04A8 ;
+  border: 1px solid #5e04a8;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5E04A8 ;
+  background-color: #5e04a8;
 }
 
 /*--------------------------------------------------------------
@@ -855,7 +862,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #5E04A8 ;
+  color: #5e04a8;
   float: left;
   width: 44px;
   height: 44px;
@@ -879,7 +886,7 @@ section {
   padding: 0 0 10px 60px;
   margin-bottom: 20px;
   font-size: 14px;
-  color: #5E04A8 ;
+  color: #5e04a8;
 }
 
 .contact .info .email p {
@@ -906,14 +913,14 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #5E04A8 ;
+  background: #5e04a8;
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #5E04A8 ;
+  background: #5e04a8;
   color: #fff;
 }
 
@@ -937,7 +944,6 @@ section {
 }
 
 .contact .php-email-form .error-message {
-  
   color: #fff;
   background: #ed3c0d;
   text-align: left;
@@ -945,12 +951,11 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .php-email-form .error-message br + br {
   margin-top: 25px;
 }
 
 .contact .php-email-form .sent-message {
-  
   color: #fff;
   background: #18d26e;
   text-align: center;
@@ -959,7 +964,6 @@ section {
 }
 
 .contact .php-email-form .loading {
-  
   background: #fff;
   text-align: center;
   padding: 15px;
@@ -1005,20 +1009,20 @@ section {
   padding: 10px 15px;
 }
 
-.contact .php-email-form button[type=submit] {
-  background: #5E04A8 ;
+.contact .php-email-form button[type="submit"] {
+  background: #5e04a8;
   border: 0;
   padding: 10px 24px;
   color: #fff;
   transition: 0.4s;
   border-radius: 4px;
-  border: 1px solid #5E04A8 ;
+  border: 1px solid #5e04a8;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: lightgray;
-  color: #5E04A8 ;
-  border: 1px solid #5E04A8 ;
+  color: #5e04a8;
+  border: 1px solid #5e04a8;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1063,11 +1067,11 @@ section {
   font-size: 15px;
 }
 
-.breadcrumbs ol li+li {
+.breadcrumbs ol li + li {
   padding-left: 10px;
 }
 
-.breadcrumbs ol li+li::before {
+.breadcrumbs ol li + li::before {
   display: inline-block;
   padding-right: 10px;
   color: #0e2442;
@@ -1077,7 +1081,7 @@ section {
 @media (max-width: 768px) {
   .breadcrumbs .d-flex {
     display: block !important;
-  } 
+  }
   .breadcrumbs ol {
     display: block;
   }
